# github-searcher

./: .env  Dockerfile  README.md  conftest.py  pyproject.toml
github_searcher/: app.py  deps.py  exceptions.py
github_searcher/api/v0/: repos.py  repos_searching.py
github_searcher/clients/cache/: cache_protocol.py
github_searcher/clients/github/: client_protocol.py  custom_async_client.py  url_builder.py
github_searcher/configs/: cache_config.py  github_api_config.py  logger_config.py
github_searcher/schemas/github_api/: __init__.py  repositories_search_response.py  repository.py
github_searcher/services/: repos.py  repos_searching.py  search_args.py
tests/: mocked_github_api_client.py  test_app.py  utils.py
tests/clients/github/: test_custom_async_client.py
tests/services/: test_repos.py
