[tool.poetry]
name = "github-searcher"
version = "0.1.0"
description = ""
authors = ["PaulMikheev <mikheevpav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.110.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
pytz = "^2024.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
aiocache = "^0.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
